Refactored the code, added CameraController
Created a CameraController class that implements Singleton design pattern.
To initialize the Camera, call CameraController.Instance().InitializeCamera(pictureBox1);
To start the video streaming, call CameraController.Instance().StartStreaming();
To change the pictureBox without reinitializing Camera, call CameraController.Instance().ChangePictureBox(pictureBox);
To Stop the streaming, call CameraController.Instance().StopStreaming();

--- a/WindowsFormsApp1/friendcognition.csproj
+++ b/WindowsFormsApp1/friendcognition.csproj
@@ -55,6 +55,7 @@
     <Compile Include="AppForm.Designer.cs">
       <DependentUpon>AppForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="CameraController.cs" />
     <Compile Include="OpenForm.cs">
       <SubType>Form</SubType>
     </Compile>
