--- a/WindowsFormsApp1/friendcognition.csproj
+++ b/WindowsFormsApp1/friendcognition.csproj
@@ -56,6 +56,7 @@
       <DependentUpon>AppForm.cs</DependentUpon>
     </Compile>
     <Compile Include="CameraController.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="OpenForm.cs">
       <SubType>Form</SubType>
     </Compile>
