--- a/WindowsFormsApp1/friendcognition.csproj
+++ b/WindowsFormsApp1/friendcognition.csproj
@@ -57,6 +57,12 @@
     <Compile Include="LOGIN.Designer.cs">
       <DependentUpon>LOGIN.cs</DependentUpon>
     </Compile>
+    <Compile Include="NameInput.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NameInput.Designer.cs">
+      <DependentUpon>NameInput.cs</DependentUpon>
+    </Compile>
     <Compile Include="OpenForm.cs">
       <SubType>Form</SubType>
     </Compile>
