changes Haroldas form style

--- a/WindowsFormsApp1/friendcognition.csproj
+++ b/WindowsFormsApp1/friendcognition.csproj
@@ -75,6 +75,9 @@
     <EmbeddedResource Include="LOGIN.resx">
       <DependentUpon>LOGIN.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="NameInput.resx">
+      <DependentUpon>NameInput.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="OpenForm.resx">
       <DependentUpon>OpenForm.cs</DependentUpon>
     </EmbeddedResource>
