--- a/FaceRecognitionApp/friendcognition.csproj
+++ b/FaceRecognitionApp/friendcognition.csproj
@@ -41,7 +41,7 @@
   <ItemGroup>
     <Reference Include="FaceSDK.NET, Version=6.5.1.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Program Files (x86)\Luxand\FaceSDK\bin\win64\FaceSDK.NET.dll</HintPath>
+      <HintPath>sdk\FaceSDK.NET.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
