--- a/FaceRecognitionApp/friendcognition.csproj
+++ b/FaceRecognitionApp/friendcognition.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="CameraController.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="DataController.cs" />
     <Compile Include="FaceRecognitionController.cs" />
     <Compile Include="LOGIN.cs">
       <SubType>Form</SubType>
