--- a/FaceRecognitionApp/friendcognition.csproj
+++ b/FaceRecognitionApp/friendcognition.csproj
@@ -84,6 +84,12 @@
     <Compile Include="CameraForm.Designer.cs">
       <DependentUpon>CameraForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Profile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Profile.Designer.cs">
+      <DependentUpon>Profile.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterCamera.cs">
@@ -103,6 +109,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CameraForm.resx">
       <DependentUpon>CameraForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Profile.resx">
+      <DependentUpon>Profile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -165,6 +174,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\if_error_1646012.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\if_45_Menu_106200.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\if_detail-information-menu-data_2075825.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\if_dot-more-menu-hide_2205199.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\if_profile-alt-4_299106.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
