--- a/FaceRecognitionApp/App.config
+++ b/FaceRecognitionApp/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="friendcognition.Properties.Settings.DatabaseConnectionString"
+            connectionString="Data Source=friendcognition.database.windows.net;Initial Catalog=Database;User ID=gravus;Password=Saldytuvas1"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
